--- a/boilerplate/public/api.html
+++ b/boilerplate/public/api.html
@@ -8,9 +8,10 @@
   <!-- antd 2.13.1 -->
   <script src="https://gw.alipayobjects.com/os/rmsportal/jaBdslfXqAHTVBcXroYL.js"></script>
   <link charset="utf-8" rel="stylesheet" type="text/css" href="https://unpkg.com/antd@next/dist/antd.min.css">
-  <link rel="stylesheet" href="api.css" />
+  <!-- <link rel="stylesheet" href="api.css" /> -->
 </head>
 <body>
-  <script src="api.js"></script>
+	<center id="app"></center>
+  <!-- <script src="api.js"></script> -->
 </body>
 </html>
